--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,14 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
   flutter_signin_button: ^2.0.0
   autocomplete_textfield_ns: ^2.0.0
+  video_player: ^2.4.5
   
 
   
@@ -93,6 +95,8 @@ flutter:
     - assets/img/foods/24.jpg
     - assets/img/foods/31.jpg
     - assets/img/foods/32.jpg
+    - assets/img/foods/41.jpg
+    - assets/img/foods/42.jpg
 
 
 
@@ -110,12 +114,11 @@ flutter:
     - assets/img/types/4.jpg
     - assets/img/types/5.jpg
     - assets/img/types/6.jpg
-   
 
 
 
 
-    
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
