--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
     sdk: flutter
   localization: ^2.1.0
   table_calendar: ^3.0.2
+  dropdown_button2: ^1.4.0
 
 
   flutter_localizations:
@@ -45,7 +46,8 @@ dependencies:
   autocomplete_textfield_ns: ^2.0.0
   video_player: ^2.4.5
   video_box: ^0.16.1
-  accordion: ^2.5.1
+  accordion: ^2.0.1
+
 
 
 
@@ -105,7 +107,9 @@ flutter:
     - assets/img/foods/32.jpg
     - assets/img/foods/41.jpg
     - assets/img/foods/42.jpg
-
+    - assets/img/foods/51.jpg
+    - assets/img/foods/52.jpg
+    - assets/img/foods/53.jpg
 
 
     - assets/img/persons/1.jpg
@@ -149,6 +153,11 @@ flutter:
         - asset: assets/fonts/Brandon_reg.otf
         - asset: assets/fonts/Brandon_bld.otf
           weight: 700
+        - asset: assets/fonts/Brandon_blk.otf
+        - asset: assets/fonts/Brandon_med.otf
+        - asset: assets/fonts/Brandon_reg_it.otf
+
+
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
