--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,10 @@ dependencies:
   localization: ^2.1.0
   table_calendar: ^3.0.2
   dropdown_button2: ^1.4.0
-
-
+  hive_flutter: ^1.1.0
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -45,25 +42,17 @@ dependencies:
   flutter_signin_button: ^2.0.0
   autocomplete_textfield_ns: ^2.0.0
   video_player: ^2.4.5
-  video_box: ^0.16.1
-  accordion: ^2.0.1
-
-
-
-
-
-
-  
-
-  
-  
-  
-  
+  accordion: ^2.3.0
+  dotted_border: ^2.0.0+2
+  dio: ^4.0.6
+  flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  hive_generator: ^1.1.3
+  build_runner: ^2.2.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -86,52 +75,16 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/l10n/
-    - assets/img/foods/1.jpg
-    - assets/img/foods/2.jpg
-    - assets/img/foods/3.jpg
-    - assets/img/foods/4.jpg
-    - assets/img/foods/5.jpg
-    - assets/img/foods/6.jpg
-    - assets/img/foods/7.jpg
-    - assets/img/foods/11.jpg
-    - assets/img/foods/12.jpg
-    - assets/img/foods/13.jpg
-    - assets/img/foods/14.jpg
-    - assets/img/foods/15.jpg
-    - assets/img/foods/16.jpg
-    - assets/img/foods/21.jpg
-    - assets/img/foods/22.jpg
-    - assets/img/foods/23.jpg
-    - assets/img/foods/24.jpg
-    - assets/img/foods/31.jpg
-    - assets/img/foods/32.jpg
-    - assets/img/foods/41.jpg
-    - assets/img/foods/42.jpg
-    - assets/img/foods/51.jpg
-    - assets/img/foods/52.jpg
-    - assets/img/foods/53.jpg
 
+    - assets/img/foodData/
 
-    - assets/img/persons/1.jpg
-    - assets/img/persons/2.jpg
-    - assets/img/persons/3.jpg
-    - assets/img/persons/4.jpg
-    - assets/img/persons/5.jpg
-    - assets/img/persons/6.jpg
+    - assets/img/chefData/
 
+    - assets/img/types/
 
-    - assets/img/types/1.jpg
-    - assets/img/types/2.jpg
-    - assets/img/types/3.jpg
-    - assets/img/types/4.jpg
-    - assets/img/types/5.jpg
-    - assets/img/types/6.jpg
+    - assets/img/foods/
 
-    - assets/video/1.mp4
-
-
-
-
+    - assets/video/
 
 
   #   - images/a_dot_ham.jpeg
