--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
   shared_preferences: ^2.0.17
+  cached_network_image: ^3.2.0
 
 
 dev_dependencies:
