--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   equatable: ^2.0.5
   shared_preferences: ^2.0.17
   cached_network_image: ^3.2.0
+  smooth_page_indicator: ^1.0.0+2
 
 
 dev_dependencies:
