--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   shared_preferences: ^2.0.17
   cached_network_image: ^3.2.0
   smooth_page_indicator: ^1.0.0+2
+  webview_flutter: ^3.0.4
 
 dev_dependencies:
   flutter_test:
